[package]
name = "esq"
version = "0.1.0"
edition = "2024"
description = "a minimalist blazing fast tool to query Elasticsearch"
authors = ["Jean-Luc Trommparent <jlt@kezako.net>"]
license = "MIT"
keywords = ["tail", "elasticsearch", "logs", "query"]
repository = "https://github.com/jiel/esq"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
dirs = "5.0"
rpassword = "7.0"
dateparser = "0.2.1"